--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,9 +15,20 @@ jobs:
         run: |
           nuget restore
           msbuild /p:ErrorLog=analysis.sarif
+          for sarifFile in $(find ./ -name '*.sarif')
+          do
+            cat $sarifFile
+          done
         
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
+
+      - name: converted
+        run: |
+          for sarifFile in $(find ../results -name '*.sarif')
+          do
+            cat $sarifFile
+          done
         
       - name: Upload sarif	
         uses: github/codeql-action/upload-sarif@v1
