--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,10 +12,13 @@ jobs:
       - uses: nuget/setup-nuget@v1.0.5
       - uses: microsoft/setup-msbuild@v1.0.2
 
+      - name: Set up projects
+        uses: security-code-scan/security-code-scan-add-action@main
+
       - name: Build
         run: |
           nuget restore
-          msbuild /p:ErrorLog=analysis.sarif
+          msbuild
         
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
