--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,7 +22,7 @@ jobs:
         
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
-      - run: type D:\a\FullDotNetWebApp\FullDotNetWebApp\FullDotNetWebApp\FullDotNetWebApp.csproj
+      - run: type D:\a\FullDotNetWebApp\FullDotNetWebApp\FullDotNetWebApp\packages.config
         
       - name: Upload sarif
         uses: github/codeql-action/upload-sarif@v1
