--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,9 +19,15 @@ jobs:
         run: |
           nuget restore
           msbuild
+          type ./FullDotNetWebApp/analysis.sarif	
+          type ./FullDotNetWebApp2/analysis.sarif
         
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
+      - name: converted	
+        run: |	
+          type ../results/0.sarif	
+          type ../results/1.sarif
         
       - name: Upload sarif
         uses: github/codeql-action/upload-sarif@v1
